tests/typing/bad/testfile-as-1.rs


fn main() {

    let v = vec![0, 1];

    v[1usize as u64];
}